--- a/test/index.html
+++ b/test/index.html
@@ -74,62 +74,6 @@
       <div id="customCarousel1" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
         </ol>
-          <div class="carousel-item">
-            <div class="box">
-              <div class="baby_detail">
-                <div class="baby_text">
-                  <h2>
-                    baby <br />
-                    Care center
-                  </h2>
-                </div>
-                <a href="">
-                  Read More
-                </a>
-              </div>
-              <div class="care_detail">
-                <a href="">
-                  Contact Us
-                </a>
-                <div class="care_text">
-                  <h2>
-                    We will take <br />
-                    Care of <br />
-                    your Baby
-                  </h2>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="box">
-              <div class="baby_detail">
-                <div class="baby_text">
-                  <h2>
-                    baby <br />
-                    Care center
-                  </h2>
-                </div>
-                <a href="">
-                  Read More
-                </a>
-              </div>
-              <div class="care_detail">
-                <a href="">
-                  Contact Us
-                </a>
-                <div class="care_text">
-                  <h2>
-                    We will take <br />
-                    Care of <br />
-                    your Baby
-                  </h2>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
     <!-- end slider section -->
   </div>
@@ -274,7 +218,7 @@ Ini Trisna, beliau kecelakaan saat berangkat ke sekolah. Beliau mengalami patah 
           </div>
           <div class="detail-box">
             <h5>
-              Donasimu semangat untuk Trisna!
+              Donasimu adalah semangat untuk Trisna!
             </h5>
             </a>
           </div>
